--- a/TypeScriptHTMLApp1/TypeScriptHTMLApp1/Cellula.csproj
+++ b/TypeScriptHTMLApp1/TypeScriptHTMLApp1/Cellula.csproj
@@ -16,6 +16,7 @@
     <IISExpressAnonymousAuthentication />
     <IISExpressWindowsAuthentication />
     <IISExpressUseClassicPipelineMode />
+    <UseGlobalApplicationHostFile />
   </PropertyGroup>
   <ItemGroup>
     <Content Include="lib\easeljs-0.8.0.min.js" />
@@ -24,28 +25,28 @@
     <Content Include="web.config" />
   </ItemGroup>
   <ItemGroup>
-    <TypeScriptCompile Include="application.ts" />
+    <TypeScriptCompile Include="client-scripts\application.ts" />
     <TypeScriptCompile Include="factories\being-factory.ts" />
-    <TypeScriptCompile Include="being.ts" />
-    <TypeScriptCompile Include="cell.ts" />
-    <TypeScriptCompile Include="controls-manager.ts" />
+    <TypeScriptCompile Include="client-scripts\being.ts" />
+    <TypeScriptCompile Include="client-scripts\cell.ts" />
+    <TypeScriptCompile Include="client-scripts\controls-manager.ts" />
     <TypeScriptCompile Include="factories\gameobject-factory.ts" />
-    <TypeScriptCompile Include="food.ts" />
-    <TypeScriptCompile Include="gameobject-data.ts" />
-    <TypeScriptCompile Include="constants.ts" />
+    <TypeScriptCompile Include="client-scripts\food.ts" />
+    <TypeScriptCompile Include="client-scripts\gameobject-data.ts" />
+    <TypeScriptCompile Include="client-scripts\constants.ts" />
     <TypeScriptCompile Include="factories\cell-factory.ts" />
-    <TypeScriptCompile Include="game-object.ts" />
-    <TypeScriptCompile Include="graphics-engine.ts" />
+    <TypeScriptCompile Include="client-scripts\game-object.ts" />
+    <TypeScriptCompile Include="client-scripts\graphics-engine.ts" />
     <TypeScriptCompile Include="lib\createjs-lib.d.ts" />
     <TypeScriptCompile Include="lib\easeljs.d.ts" />
-    <TypeScriptCompile Include="game.ts" />
+    <TypeScriptCompile Include="client-scripts\game.ts" />
     <TypeScriptCompile Include="lib\jquery.d.ts" />
     <TypeScriptCompile Include="lib\tweenjs.d.ts" />
-    <TypeScriptCompile Include="map.ts" />
-    <TypeScriptCompile Include="mechanic-engine.ts" />
-    <TypeScriptCompile Include="menu.ts" />
-    <TypeScriptCompile Include="npc.ts" />
-    <TypeScriptCompile Include="utils.ts" />
+    <TypeScriptCompile Include="client-scripts\map.ts" />
+    <TypeScriptCompile Include="client-scripts\mechanic-engine.ts" />
+    <TypeScriptCompile Include="menus\menu.ts" />
+    <TypeScriptCompile Include="client-scripts\npc.ts" />
+    <TypeScriptCompile Include="client-scripts\utils.ts" />
   </ItemGroup>
   <ItemGroup>
     <None Include="web.Debug.config">
