--- a/TypeScriptHTMLApp1/TypeScriptHTMLApp1/Cellula.csproj
+++ b/TypeScriptHTMLApp1/TypeScriptHTMLApp1/Cellula.csproj
@@ -40,6 +40,7 @@
     <TypeScriptCompile Include="lib\createjs-lib.d.ts" />
     <TypeScriptCompile Include="lib\easeljs.d.ts" />
     <TypeScriptCompile Include="client-scripts\game.ts" />
+    <TypeScriptCompile Include="lib\Event.ts" />
     <TypeScriptCompile Include="lib\jquery.d.ts" />
     <TypeScriptCompile Include="lib\tweenjs.d.ts" />
     <TypeScriptCompile Include="client-scripts\map.ts" />
